added [ar-AE] and [ar-KW] locale data referrers, fdo#71140

for AED and KWD currencies, simply referring [ar-SA] in all other
aspects

Change-Id: I2ca19d1f7d2e807406bf207babe76cae967eea81